[package]
name = "canvas_api_rust"
version = "0.1.0"
authors = ["Justin Lee <justinlee0022@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
dotenv = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
listenfd = "0.3"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }